# VDA-5050-Traffic-Generator

./: .clang-format  .gitignore  CITATION.cff  CMakeLists.txt  README.md  REUSE.toml  config.yaml  docker-compose.yaml  mosquitto.conf  pyproject.toml  zenoh-conf.json5
configs/: gnb_zmq.yaml  gnb_zmq_ric.yaml
eval/: .gitignore  README.md
eval/e2e_latency_middleware/: eval_e2e.py  latency_over_time.py
eval/e2e_latency_middleware/latency_over_time/: mqtt_teleop_latency.csv
eval/e2e_latency_middleware/scenario_teleop/: mqtt.csv  zenoh_quic_client.csv  zenoh_quic_peer.csv  zenoh_tcp_client.csv  zenoh_tcp_peer.csv  zenoh_udp_client.csv  zenoh_udp_peer.csv
eval/e2e_latency_middleware/scenario_vda/: mqtt.csv  zenoh_quic_client.csv  zenoh_quic_peer.csv  zenoh_tcp_client.csv  zenoh_tcp_peer.csv  zenoh_udp_client.csv  zenoh_udp_peer.csv
eval/rtp_stream_latency/: README.md  eval_stream.py  testbed_MQTT_Teleop.csv  virtual_MQTT_Teleop.csv
eval/throughput/: README.md  eval_bars.py
eval/throughput/scenarios/mqtt/: base_send.csv  rlc.csv  ue_send.csv
eval/throughput/scenarios/zenoh_quic_client/: base_send.csv  rlc.csv  ue_send.csv
eval/throughput/scenarios/zenoh_quic_peer/: base_send.csv  rlc.csv  ue_send.csv
eval/throughput/scenarios/zenoh_tcp_client/: base_send.csv  rlc.csv  ue_send.csv
eval/throughput/scenarios/zenoh_tcp_peer/: base_send.csv  rlc.csv  ue_send.csv
eval/throughput/scenarios/zenoh_tcp_peer_not_predeclared/: base_send.csv  rlc.csv  ue_send.csv
eval/throughput/scenarios/zenoh_udp_client/: base_send.csv  rlc.csv  ue_send.csv
eval/throughput/scenarios/zenoh_udp_peer/: base_send.csv  rlc.csv  ue_send.csv
src/: CMakeLists.txt
src/base/: CMakeLists.txt  base.yaml  base_mqtt.cpp  base_zenoh.cpp  zenoh_config.json
src/controller/: CMakeLists.txt  agv.cpp  agv.h  config.cpp  config.hpp  controller.cpp  controller_interface.h  controller_interface_zmq.cpp  controller_interface_zmq.h
src/mqtt/: CMakeLists.txt  mqtt_client.cpp  mqtt_client.h
src/ue/: CMakeLists.txt  ue.yaml  ue_mqtt.cpp  ue_zenoh.cpp  zenoh_config_teleop.json  zenoh_config_vda.json
src/utils/: CMakeLists.txt  camera_stream.h  command.cpp  command.h  config_loader.h  main_loop.cpp  main_loop.h
src/zenoh/: CMakeLists.txt  zenoh.cpp  zenoh.h
